force-app/main/default/objects/ContactAssociation__c/ContactAssociation__c.object-meta.xml
<CustomObject>
    <description>Relationship between contacts and job applications</description>
    <label>Contact Association</label>
    <nameField>
        <label>Contact Association</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>