force-app/main/default/objects/ContactAssociation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact related to the Job Application</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ContactAssociations</relationshipLabel>
    <relationshipName>ContactAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>