force-app/main/default/objects/ContactAssociation__c/fields/JobApplication__c.field-meta.xml
<CustomField>
    <fullName>JobApplication__c</fullName>
    <description>Job application the contact is related to.</description>
    <label>Job Application</label>
    <referenceTo>JobApplication__c</referenceTo>
    <relationshipLabel>ContactAssociations</relationshipLabel>
    <relationshipName>JobApplications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>